ConfigMap-and-Secret-ina-Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-config-secret
spec:
  containers:
  - name: test-container
    image: nginx
