daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: batch-daemonset
spec:
  selector:
    matchLabels:
      app: batch
  template:
    metadata:
      labels:
        app: batch
    spec:
      containers:
      - name: batch-container
        image: bhagyash654/batch:v2
        ports:
        - containerPort: 80
