hostPath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - mountPath: /data
      name: myvolume
     
  volumes:
- name: host-volume
  hostPath:
    path: /data
