pod-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: my-storage

  volumes:
  - name: my-storage
    persistentVolumeClaim:
      claimName: my-pvc
