pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: batch-pod
  labels:
    app: batch
spec:
  containers:
  - name: batch-container
    image: bhagyash654/batch:v2
    imagePullPolicy: Always
    ports:
    - containerPort: 80
