path-base-ingress.yaml
## Install Nginx Ingress Controller 

kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.9.4/deploy/static/provider/aws/deploy.yaml

kubectl get pods -n ingress-nginx

kubectl get svc -n ingress-nginx


## vim app.yaml
# file: apps.yaml

# --- App 1: Frontend ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc     
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
---
# --- App 2: Backend API ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hashicorp/http-echo:alpine
        args:
        - "-text=Hello from Backend API!"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5678

------------------------------------------------------------
kubectl apply -f app.yaml
kubectl get pods

## path-based routing | ingress.yaml

## vim path-based-ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-based-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:

      - path: /                  
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80

      - path: /api               
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80

----------------------------------------------------

# Apply 
kubectl apply -f path-based-ingress.yaml

# Verify
kubectl get ingress
kubectl describe ingress path-based-ingress
